# log_analyzer

./: .gitignore  CI_cleaning.sh  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: docker_build.yml  docker_build_and_test.yml  docker_build_test.yml  log_analyzer_ci.yml
config/: config.py  constants.py
log_analyzer/: __main__.py  analyzer.py  cli.py  core.py  log_analyzer.py  output.json  utils.py
log_analyzer/analyzers/: base_log_analyzer.py  csv_log_analyzer.py  excel_log_analyzer.py  json_log_analyzer.py
log_analyzer/config/: config.py  constants.py
log_analyzer/factories/: log_analyzer_factory.py  output_formatter_factory.py
log_analyzer/formatters/: base_formatter.py  csv_formatter.py  json_formatter.py  xml_formatter.py
log_analyzer/tests/: test_analyzer.py  test_cli.py  test_utils.py
log_analyzer/tests/factories/: test_log_analyzer_factory.py  test_output_formatter_factory.py
tests/: test_analyzer.py  test_cli.py  test_utils.py  test_xml_formatter.py
tests/factories/: test_log_analyzer_factory.py  test_output_formatter_factory.py
