[tool.poetry]
name = "log-analyzer"
version = "1.1.0"
description = "Command-line tool to analyze the content of log files."
authors = ["mike <eugemike09@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.2.2,<2.3.0"
pytest = ">=8.2.2,<8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
log-analyzer = "log_analyzer.log_analyzer:main"
